# ai-personal-trainer

./: .env  .env.example  LICENSE  README.md  docker-compose.yml  prompts.yaml
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
backend/app/: __init__.py  db.py  models.py  utils.py
backend/app/ai/: openrouter.py
backend/app/api/: generate.py
backend/app/clients/: hevy_client.py
backend/app/services/: hevy_sync.py  prompt_builder.py  sync_service.py
backend/tests/: test_exercise_matching.py  test_generate_workout.py
database/: README.md  exercise_videos.json  goal_templates.json  migrate.py
docs/: README.md
frontend/: Dockerfile  index.tsx  package-lock.json  package.json  tailwind.config.js
frontend/components/: Layout.tsx
frontend/pages/: index.tsx
frontend/styles/: globals.css
scripts/: README.md  pull_hevy.py  validate_videos.py
tests/: README.md  test_db.py  test_exercise_matching.py  test_hevy_client.py  test_hevy_sync.py  test_migrate.py  test_models.py  test_openrouter.py  test_prompt_builder.py  test_prompts_api.py  test_pull_hevy.py  test_sync_service.py
